# supervisor_distillation

./: CLAUDE.md  CONTRIBUTING.md  README.md  idea.md  plan.md  pyproject.toml
distill/: __init__.py  log.py  models.py  orchestrator.py  prompts.py  repl.py
examples/: baseline.py  basic_qa.py  run_experiment.py
experiments/: ablation.sh  ib_reproduce.sh  minions_qasper.sh  qasper_distractors.sh
notes/: 2_11.md  minions_vs_distill.md
orchestrator/: __init__.py  chunking.py  features.py  log.py  models.py  orchestrator.py  prompts.py  repl.py
tasks/qasper/: __init__.py  dataset.py
utils/: analysis.py
viz/: index.html  visualize.py
